<resources>
    <string name="app_name" translatable="false">Travewhere</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="greeting_user_name">Hi, Duy Dao!</string>
    <string name="settings_label">Settings</string>
    <string name="languages_label">Languages</string>
    <string name="preferences_label">Preferences</string>
    <string name="security_label">Security</string>
    <string name="currency_label">Currency</string>
    <string name="support_label">Support</string>
    <string name="contact_us_label">Contact Us</string>
    <string name="faqs_label">FAQs</string>
    <string name="about_us_label">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="languages_selection">Languages Selection</string>
    <string name="language_en">English</string>
    <string name="language_vn">Vietnamese</string>
    <string name="relocate">Relocate</string>
    <string name="get_directions">Directions</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="view_details">Details</string>
    <string name="close">Close</string>
    <string name="back_button">Back Button</string>
    <string name="member_status">Member Status</string>
    <string name="member_status_icon">Member Status Icon</string>
    <string name="you_are_a">You are a</string>
    <string name="rewards_system">Rewards System</string>
    <string name="current_points">Current Points: %d</string>
    <string name="bronze_user_icon">Bronze User Icon</string>
    <string name="bronze">Bronze</string>
    <string name="zero_pts">0 PTS</string>
    <string name="gold_user_icon">Gold User Icon</string>
    <string name="gold">Gold</string>
    <string name="five_hundred_pts">500 PTS</string>
    <string name="diamond_user_icon">Diamond User Icon</string>
    <string name="diamond">Diamond</string>
    <string name="one_thousand_pts">1000 PTS</string>
    <string name="special_offer_icon">Special Offer Icon</string>
    <string name="gift_box_icon">Gift Box Icon</string>
    <string name="percent_icon">Percent Icon</string>
    <string name="how_it_works">How it works?</string>
    <string name="detail_bookings">Detail Bookings</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="room_type">Room Type</string>
    <string name="price_per_night">Price Per Night</string>
    <string name="check_in" translatable="false">Check-in</string>
    <string name="select_date_time">Select Date - Time</string>
    <string name="checkout" translatable="false">Checkout</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="no_coupon_applied">No coupon applied</string>
    <string name="clear_coupon">Clear Coupon</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="visa_card">Visa Card</string>
    <string name="mastercard">MasterCard</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="submit_payment">Submit Payment</string>
    <string name="arrow_right">Arrow Right</string>
    <string name="booking_history">Booking History</string>
    <string name="coupons">Coupons</string>
    <string name="coupons_for_new_users">Coupons for new users!</string>
    <string name="min_spend_400k_vnd">Min Spend: 400k VND</string>
    <string name="discount_80k_vnd">Discount: 80k VND</string>
    <string name="coupon_description">• Valid for bookings made through the app from 1st December 2024 to 25th January 2025. • Minimum spending is 400k VND. • Offer valid for one-time use per account. • Cannot be combined with other discounts or promotions. • Taxes and fees not included in the discount.</string>
    <string name="copy_coupon_code">Copy Coupon Code</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="are_you_an_accommodation_owner">Are you an accommodation owner?</string>
    <string name="by_checking_the_box_you_agree_to_our_terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="create_hotel">Create Hotel</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="selected_address">Selected Address</string>
    <string name="select_address">Select Address</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_room_types">Add Room Types</string>
    <string name="room_capacity">Room Capacity</string>
    <string name="add_room">Add Room</string>
    <string name="room_list">Room List:</string>
    <string name="save_details">Save Details</string>
    <string name="edit_hotel">Edit Hotel</string>
    <string name="change_image">Change Image</string>
    <string name="save_changes">Save Changes</string>
    <string name="hotel_detail">Hotel Detail</string>
    <string name="call_accommodation">Call Accommodation</string>
    <string name="show_reviews">Show Reviews</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_back_phuc_hoang_thai">Welcome back, Phuc Hoang Thai!</string>
    <string name="total_income">Total Income</string>
    <string name="_12_332" translatable="false">12,332 $</string>
    <string name="see_more" translatable="false"><![CDATA[see more >>]]></string>
    <string name="total_bookings">Total Bookings</string>
    <string name="_3_232" translatable="false">3,232</string>
    <string name="accommodations_list">Accommodations List</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="search">Search</string>
    <string name="search_for_hotels">Search for hotels</string>
    <string name="search_accommodations">Search accommodations…</string>
    <string name="hotels">Hotels</string>
    <string name="booking">Booking</string>
    <string name="maps">Maps</string>
    <string name="special_deals_for_you">✨ Special deals for you!</string>
    <string name="coupons_for_our_beloved_customers">Coupons for our beloved customers!</string>
    <string name="mui_ne">Mui Ne</string>
    <string name="hotel_mui_ne">Hotel Mui Ne</string>
    <string name="_10_10" translatable="false">10/10</string>
    <string name="_85" translatable="false">(85)</string>
    <string name="_500_000_vnd" translatable="false">500.000 VND</string>
    <string name="excluded_tax_and_fees">Excluded tax and fees</string>
    <string name="username">Username</string>
    <string name="_12_31_2025_10_45_am" translatable="false">12/31/2025 10:45 AM</string>
    <string name="review_description">This is the review content. It provides user feedback on their experience with the hotel.</string>
    <string name="delete_review">Delete Review</string>
    <string name="delete">Delete</string>
    <string name="book">Book</string>
    <string name="language_settings_icon">Language Settings Icon</string>
    <string name="about_us_description" formatted="false">
        Welcome to TraveWhere! We are your trusted partner in finding the perfect accommodation for your travels, whether you\'re planning a relaxing vacation, an adventurous journey, or a business trip. Our platform is designed to make the process of booking accommodations seamless, secure, and enjoyable, ensuring you have one less thing to worry about as you explore the world.\n\n
        Founded with a vision to redefine the way people connect with accommodations, TraveWhere bridges the gap between travelers and property owners. We offer a diverse range of options, from luxurious hotels and resorts to budget-friendly stays and unique homestays. No matter your preferences or budget, TraveWhere ensures that you find the perfect place to call home during your journey.\n\n
        At TraveWhere, we pride ourselves on transparency and customer satisfaction. Our platform provides detailed property descriptions, high-quality images, and authentic customer reviews to help you make informed decisions. With advanced search filters and real-time availability updates, you can customize your search to match your specific needs and book with confidence.\n\n
        We believe that every traveler deserves an exceptional experience. That’s why we continuously strive to enhance our platform with innovative features, making it easier for you to discover new destinations and embrace the joys of travel. Whether you’re exploring bustling cities, tranquil countryside, or serene beaches, TraveWhere is here to guide you every step of the way.\n\n
        Join millions of satisfied customers who have trusted TraveWhere for their accommodation needs. Our 24/7 customer support team is always ready to assist you, ensuring your journey is smooth from start to finish. Your satisfaction is our top priority, and we are committed to delivering excellence in every interaction.\n\n
        Discover. Book. Stay. Experience the world with TraveWhere, and let us help you create unforgettable memories that last a lifetime.
    </string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email_support_travewhere_com" translatable="false">Email: support@travewhere.com</string>
    <string name="phone_84_123_456_789">Phone: +84 123 456 789</string>
    <string name="follow_us">Follow Us:</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="faqs_title">Frequently Asked Questions</string>
    <string name="faq_q1">What is TraveWhere?</string>
    <string name="faq_a1">TraveWhere is a platform that connects travelers with the perfect accommodations for their trips. We offer a wide range of options, from luxury hotels to budget-friendly stays.</string>
    <string name="faq_q2">How do I book an accommodation on TraveWhere?</string>
    <string name="faq_a2">Simply search for your desired destination, select the accommodation that suits your needs, and follow the booking steps. You can pay securely through our platform.</string>
    <string name="faq_q3">What payment methods are supported?</string>
    <string name="faq_a3">"We accept a variety of payment methods, including Visa, MasterCard, and Paypal. "</string>
    <string name="faq_q4">Can I cancel or modify my booking?</string>
    <string name="faq_a4">Yes, cancellations and modifications are possible, depending on the accommodation\'s policies. Please check the specific terms before booking or contact our support team for assistance.</string>
    <string name="faq_q5">Is customer support available?</string>
    <string name="faq_a5">Absolutely! Our customer support team is available 24/7 to assist you with any questions or issues you may have.</string>
    <string name="faq_q6">Does TraveWhere offer discounts or promotions?</string>
    <string name="faq_a6">Yes, we frequently offer special discounts and promotions. Keep an eye on our website or app to take advantage of these deals.</string>
    <string name="contact_us_title">Contact Us</string>
</resources>