<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">
    <RelativeLayout
        android:id="@+id/btnBackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/tvPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btnBack"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/edit_hotel"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hotel_name" />

    <EditText
        android:id="@+id/editPhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number" />

    <TextView
        android:id="@+id/editAddressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_address" />

    <Button
        android:id="@+id/editSelectAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_address" />

    <ImageView
        android:id="@+id/editHotelImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/hotel_image" />

    <Button
        android:id="@+id/editUploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_image" />

    <EditText
        android:id="@+id/roomTypeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room_type" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_per_night" />

    <EditText
        android:id="@+id/capacityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room_capacity" />

    <Button
        android:id="@+id/addRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_room" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/editRoomRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/editSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes" />
</LinearLayout>
