<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="230dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/rounded_rectangle"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/accommodationImage"
        android:layout_width="210dp"
        android:layout_height="120dp"
        android:src="@drawable/testingimage"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/accommodationPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mui_ne"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/accommodationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_mui_ne"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_10"
                android:textSize="14sp"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/reviewsCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_85"
                android:textSize="12sp"
                android:layout_marginStart="4dp"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_500_000_vnd"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluded_tax_and_fees"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp" />
    </LinearLayout>
</LinearLayout>


